refactoring, accounting operations
